nav drawer with items and header

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,44 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.constraint.ConstraintLayout
 
-        android:id="@+id/activity_main"
-        android:layout_width="match_parent"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
+
+    <include layout="@layout/appbar_main" />
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="@dimen/nav_drawer_width"
         android:layout_height="match_parent"
-        tools:context="de.devfest.screens.main.MainActivity">
-
-        <com.google.android.gms.common.SignInButton
-            android:id="@+id/sign_in_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:visibility="gone"
-            app:layout_constraintLeft_toLeftOf="@+id/activity_main"
-            app:layout_constraintTop_toTopOf="@+id/activity_main"/>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/common_ic_googleplayservices"
-            android:id="@+id/imageUser"
-            tools:ignore="ContentDescription"
-            app:layout_constraintLeft_toLeftOf="@+id/activity_main"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintTop_toTopOf="@+id/activity_main"
-            android:layout_marginTop="16dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textUser"
-            tools:text="andre.tietz@gmail.com"
-            app:layout_constraintLeft_toRightOf="@+id/imageUser"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintTop_toTopOf="@+id/imageUser"
-            app:layout_constraintBottom_toBottomOf="@+id/imageUser"/>
-    </android.support.constraint.ConstraintLayout>
-</layout>
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/activity_main_nav" />
+</android.support.v4.widget.DrawerLayout>
