--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <android.support.v4.widget.DrawerLayout
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <include layout="@layout/appbar_main" />
+    <include layout="@layout/appbar_main"
+        android:id="@+id/appbar"/>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
@@ -21,3 +22,4 @@
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/activity_main_nav" />
 </android.support.v4.widget.DrawerLayout>
+</layout>
