--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -3,43 +3,57 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- TODO rebuild using ConstraintLayout -->
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
+        android:id="@id/fragment_user"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/nav_header_height"
+        android:layout_height="match_parent"
         android:background="@drawable/bg_nav_header"
-        android:gravity="bottom"
-        android:orientation="vertical"
-        android:padding="@dimen/spacing"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark">
+        android:theme="@style/ThemeOverlay.AppCompat.Dark"
+        tools:layout_height="@dimen/nav_header_height">
 
         <ImageView
-            android:id="@+id/account_image"
+            android:id="@+id/user_image"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            app:srcCompat="@android:drawable/sym_def_app_icon" />
+            app:srcCompat="@android:drawable/sym_def_app_icon"
+            app:layout_constraintLeft_toLeftOf="@+id/fragment_user"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintTop_toTopOf="@+id/fragment_user"
+            android:layout_marginTop="16dp" />
 
         <TextView
-            android:id="@+id/account_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/spacing"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            tools:text="Android Studio" />
-
-        <TextView
-            android:id="@+id/account_mail"
+            android:id="@+id/user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="android.studio@android.com" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textStyle="bold"
+            tools:text="Android Studio"
+            app:layout_constraintLeft_toLeftOf="@+id/fragment_user"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/user_mail" />
+
+        <TextView
+            android:id="@+id/user_mail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="android.studio@android.com"
+            app:layout_constraintLeft_toLeftOf="@+id/fragment_user"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintBottom_toBottomOf="@+id/fragment_user"
+            android:layout_marginBottom="16dp" />
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/sign_in_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:paddingTop="16dp"
-            tools:visibility="gone" />
+            app:layout_constraintRight_toRightOf="@+id/fragment_user"
+            android:layout_marginRight="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintBottom_toBottomOf="@+id/fragment_user"
+            android:layout_marginBottom="16dp" />
 
-    </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 </layout>
