--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.v4.widget.DrawerLayout
-        android:id="@+id/drawer_layout"
+        android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
@@ -14,7 +14,7 @@
             android:id="@+id/appbar"/>
 
         <android.support.design.widget.NavigationView
-            android:id="@+id/nav_view"
+            android:id="@+id/navView"
             android:fitsSystemWindows="true"
             android:layout_width="@dimen/nav_drawer_width"
             android:layout_height="match_parent"
