--- a/app/src/main/res/layout/appbar_main.xml
+++ b/app/src/main/res/layout/appbar_main.xml
@@ -23,7 +23,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <FrameLayout
-        android:id="@+id/content_container"
+        android:id="@+id/containerContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="?actionBarSize" />
