--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.constraint.ConstraintLayout
-        android:id="@id/fragment_user"
+        android:id="@+id/fragmentUser"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/bg_nav_header"
@@ -12,47 +12,47 @@
         tools:layout_height="@dimen/nav_header_height">
 
         <de.devfest.ui.RoundedImageView
-            android:id="@+id/user_image"
+            android:id="@+id/imageUser"
             android:layout_width="56dp"
             android:layout_height="56dp"
             app:srcCompat="@android:drawable/sym_def_app_icon"
-            app:layout_constraintLeft_toLeftOf="@+id/fragment_user"
+            app:layout_constraintLeft_toLeftOf="@+id/fragmentUser"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            app:layout_constraintTop_toTopOf="@+id/fragment_user"
+            app:layout_constraintTop_toTopOf="@+id/fragmentUser"
             android:layout_marginTop="16dp" />
 
         <TextView
-            android:id="@+id/user_name"
+            android:id="@+id/textUserName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textStyle="bold"
             tools:text="Android Studio"
-            app:layout_constraintLeft_toLeftOf="@+id/fragment_user"
+            app:layout_constraintLeft_toLeftOf="@+id/fragmentUser"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/user_mail" />
+            app:layout_constraintBottom_toTopOf="@+id/textUserMail" />
 
         <TextView
-            android:id="@+id/user_mail"
+            android:id="@+id/textUserMail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="android.studio@android.com"
-            app:layout_constraintLeft_toLeftOf="@+id/fragment_user"
+            app:layout_constraintLeft_toLeftOf="@+id/fragmentUser"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            app:layout_constraintBottom_toBottomOf="@+id/fragment_user"
+            app:layout_constraintBottom_toBottomOf="@+id/fragmentUser"
             android:layout_marginBottom="16dp" />
 
         <com.google.android.gms.common.SignInButton
-            android:id="@+id/sign_in_button"
+            android:id="@+id/buttonSignIn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintRight_toRightOf="@+id/fragment_user"
+            app:layout_constraintRight_toRightOf="@+id/fragmentUser"
             android:layout_marginRight="16dp"
             android:layout_marginEnd="16dp"
-            app:layout_constraintBottom_toBottomOf="@+id/fragment_user"
+            app:layout_constraintBottom_toBottomOf="@+id/fragmentUser"
             android:layout_marginBottom="16dp" />
 
     </android.support.constraint.ConstraintLayout>
