--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,7 @@
 <resources>
-    <!-- <dimen name="spacing_xsmall">4dp</dimen>
+    <dimen name="spacing_xsmall">4dp</dimen>
     <dimen name="spacing_small">8dp</dimen>
-    <dimen name="spacing">16dp</dimen>
+    <!-- <dimen name="spacing">16dp</dimen>
     <dimen name="spacing_large">24dp</dimen>
     <dimen name="spacing_xlarge">32dp</dimen>
     <dimen name="spacing_min_touch">48dp</dimen> -->
