--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="RoundedImageView">
-        <attr name="radius" format="dimension|reference" />
+    <declare-styleable name="DevFestImageView">
+        <attr name="squareSized" format="boolean" />
+        <attr name="roundCorners" format="boolean" />
+        <attr name="cornerRadius" format="dimension|reference" />
     </declare-styleable>
 </resources>
