--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="tag_android">#A4C639</color>
+    <color name="tag_web">#0266C8</color>
+    <color name="tag_cloud">#F2B50F</color>
     <color name="tag_android_overlay">#AAA4C639</color>
-    <color name="tag_web_overlay">#AAA4C639</color>
-    <color name="tag_cloud_overlay">#AAA4C639</color>
+    <color name="tag_web_overlay">#AA0266C8</color>
+    <color name="tag_cloud_overlay">#AAF2B50F</color>
 </resources>
