--- a/app/src/main/res/layout/fragment_speakers.xml
+++ b/app/src/main/res/layout/fragment_speakers.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/listSpeakers"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clipToPadding="false"
         android:paddingTop="@dimen/spacing_small"
         android:paddingStart="@dimen/spacing_small"
         android:paddingEnd="@dimen/spacing_small" />
-
 </layout>
