--- a/app/src/main/res/layout/item_speaker.xml
+++ b/app/src/main/res/layout/item_speaker.xml
@@ -21,12 +21,14 @@
                 android:adjustViewBounds="false"
                 android:cropToPadding="false"
                 android:scaleType="centerCrop"
+                android:transitionName="@string/transition_speaker_image"
                 app:squareSized="true"
                 app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
                 app:layout_constraintTop_toTopOf="@+id/constraintLayout"
                 app:layout_constraintRight_toRightOf="@+id/constraintLayout"
                 app:layout_constraintHorizontal_bias="0.0"
-                tools:ignore="ContentDescription"/>
+                tools:ignore="ContentDescription"
+                tools:targetApi="lollipop"/>
 
             <View
                 android:layout_width="0dp"
