--- a/app/src/main/res/layout/fragment_speaker_details.xml
+++ b/app/src/main/res/layout/fragment_speaker_details.xml
@@ -5,24 +5,31 @@
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true">
 
             <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/collapsingToolbarLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:titleEnabled="true"
+                android:fitsSystemWindows="false"
+                app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
+                app:expandedTitleTextAppearance="@style/TextAppearance.DevFest.CollapsingToolbar.Expanded.Inverse"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <de.devfest.ui.DevFestImageView
                     android:id="@+id/imageSpeaker"
                     android:layout_width="match_parent"
-                    android:layout_height="250dp"
+                    android:layout_height="wrap_content"
                     app:layout_collapseMode="parallax"
                     android:scaleType="centerCrop"
+                    android:fitsSystemWindows="true"
                     android:transitionName="@string/transition_speaker_image"
                     app:squareSized="true"
                     tools:targetApi="lollipop"/>
@@ -31,8 +38,16 @@
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?actionBarSize"
+                    app:navigationIcon="@drawable/ic_arrow_left"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                     app:layout_collapseMode="pin" />
+
+                <View
+                    android:id="@+id/statusBarBackground"
+                    android:background="@color/black_54"
+                    android:fitsSystemWindows="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="24dp" />
             </android.support.design.widget.CollapsingToolbarLayout>
         </android.support.design.widget.AppBarLayout>
 
@@ -41,17 +56,83 @@
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <LinearLayout
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/constraintLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_gravity="center">
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/imageSpeakerDesc"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:src="@drawable/ic_person"
+                    android:scaleType="center"
+                    android:layout_marginStart="16dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:layout_marginLeft="16dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="16dp"/>
+
+                <TextView
+                    android:id="@+id/textSpeakerDesc"
+                    android:lineSpacingMultiplier="1.3"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    app:layout_constraintLeft_toRightOf="@+id/imageSpeakerDesc"
+                    android:layout_marginLeft="16dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:layout_marginRight="16dp"/>
+
+                <ImageView
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:src="@drawable/ic_speaker"
+                    android:id="@+id/imageSpeakerName"
+                    android:scaleType="center"
+                    android:layout_marginStart="16dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:layout_marginLeft="16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/textSpeakerDesc"
+                    android:layout_marginTop="16dp"/>
 
                 <TextView
                     android:id="@+id/textSpeakerName"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
+                    android:layout_height="wrap_content"
+                    tools:text="Speaker Name"
+                    android:layout_marginStart="20dp"
+                    app:layout_constraintLeft_toRightOf="@+id/imageSpeakerName"
+                    android:layout_marginLeft="20dp"
+                    app:layout_constraintTop_toTopOf="@+id/imageSpeakerName"
+                    app:layout_constraintBottom_toBottomOf="@+id/imageSpeakerName"/>
+
+                <ImageView
+                    android:id="@+id/imageSpeakerCompany"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:src="@drawable/ic_company"
+                    android:scaleType="center"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/imageSpeakerName"
+                    android:layout_marginStart="16dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:layout_marginLeft="16dp"/>
+
+                <TextView
+                    android:id="@+id/textSpeakerCompany"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="Company"
+                    android:layout_marginStart="20dp"
+                    app:layout_constraintLeft_toRightOf="@+id/imageSpeakerCompany"
+                    android:layout_marginLeft="20dp"
+                    app:layout_constraintTop_toTopOf="@+id/imageSpeakerCompany"
+                    app:layout_constraintBottom_toBottomOf="@+id/imageSpeakerCompany"/>
+            </android.support.constraint.ConstraintLayout>
         </android.support.v4.widget.NestedScrollView>
     </android.support.design.widget.CoordinatorLayout>
 </layout>
