--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,10 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="TextAppearance.DevFest.CollapsingToolbar.Expanded.Inverse"
+           parent="TextAppearance.Design.CollapsingToolbar.Expanded">
+        <item name="android:textColor">?android:attr/textColorPrimaryInverse</item>
+    </style>
 
 
 </resources>
