--- a/app/src/main/res/layout/fragment_speaker_details.xml
+++ b/app/src/main/res/layout/fragment_speaker_details.xml
@@ -75,6 +75,7 @@
 
                 <TextView
                     android:id="@+id/textSpeakerDesc"
+                    tools:text="Awesome developer at awesome company doing lots of awesome stuff"
                     android:lineSpacingMultiplier="1.3"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -88,50 +89,54 @@
                     android:layout_marginRight="16dp"/>
 
                 <ImageView
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:src="@drawable/ic_speaker"
-                    android:id="@+id/imageSpeakerName"
-                    android:scaleType="center"
-                    android:layout_marginStart="16dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    android:layout_marginLeft="16dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textSpeakerDesc"
-                    android:layout_marginTop="16dp"/>
-
-                <TextView
-                    android:id="@+id/textSpeakerName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="Speaker Name"
-                    android:layout_marginStart="20dp"
-                    app:layout_constraintLeft_toRightOf="@+id/imageSpeakerName"
-                    android:layout_marginLeft="20dp"
-                    app:layout_constraintTop_toTopOf="@+id/imageSpeakerName"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageSpeakerName"/>
-
-                <ImageView
                     android:id="@+id/imageSpeakerCompany"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
                     android:src="@drawable/ic_company"
                     android:scaleType="center"
-                    android:layout_marginTop="16dp"
-                    app:layout_constraintTop_toBottomOf="@+id/imageSpeakerName"
+                    android:layout_marginTop="24dp"
+                    app:layout_constraintTop_toBottomOf="@+id/textSpeakerDesc"
                     android:layout_marginStart="16dp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     android:layout_marginLeft="16dp"/>
+
+                <TextView
+                    android:id="@+id/textSpeakerJobTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="Developer"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textStyle="bold"
+                    android:layout_marginStart="20dp"
+                    app:layout_constraintLeft_toRightOf="@+id/imageSpeakerCompany"
+                    android:layout_marginLeft="20dp"
+                    app:layout_constraintTop_toTopOf="@+id/imageSpeakerCompany"/>
 
                 <TextView
                     android:id="@+id/textSpeakerCompany"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     tools:text="Company"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textStyle="bold"
                     android:layout_marginStart="20dp"
                     app:layout_constraintLeft_toRightOf="@+id/imageSpeakerCompany"
                     android:layout_marginLeft="20dp"
-                    app:layout_constraintTop_toTopOf="@+id/imageSpeakerCompany"
+                    app:layout_constraintTop_toBottomOf="@+id/textSpeakerJobTitle"
                     app:layout_constraintBottom_toBottomOf="@+id/imageSpeakerCompany"/>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/gridSocialButtons"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:layout_marginLeft="16dp"
+                    app:layout_constraintTop_toBottomOf="parent"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:layout_marginRight="16dp"/>
             </android.support.constraint.ConstraintLayout>
         </android.support.v4.widget.NestedScrollView>
     </android.support.design.widget.CoordinatorLayout>
