set title of current navigation app section in toolbar

--- a/app/src/main/res/layout/item_session.xml
+++ b/app/src/main/res/layout/item_session.xml
@@ -15,9 +15,7 @@
         android:clickable="true"
         app:cardUseCompatPadding="true"
         app:cardPreventCornerOverlap="true"
-        app:cardCornerRadius="@dimen/spacing_xsmall"
-
-        >
+        app:cardCornerRadius="@dimen/spacing_xsmall">
 
         <ImageView
             android:id="@+id/imageSessionBackground"
