--- a/app/src/main/res/layout/fragment_speaker_details.xml
+++ b/app/src/main/res/layout/fragment_speaker_details.xml
@@ -39,6 +39,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="?actionBarSize"
                     app:navigationIcon="@drawable/ic_arrow_left"
+                    app:titleMarginStart="0dp"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                     app:layout_collapseMode="pin" />
 
@@ -62,7 +63,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-
                 <android.support.constraint.ConstraintLayout
                     android:id="@+id/constraintLayout"
                     android:layout_width="match_parent"
@@ -74,9 +74,9 @@
                         android:layout_height="36dp"
                         android:src="@drawable/ic_person"
                         android:scaleType="center"
-                        android:layout_marginStart="16dp"
+                        android:layout_marginStart="20dp"
                         app:layout_constraintLeft_toLeftOf="parent"
-                        android:layout_marginLeft="16dp"
+                        android:layout_marginLeft="20dp"
                         app:layout_constraintTop_toTopOf="parent"
                         android:layout_marginTop="16dp"
                         tools:ignore="ContentDescription"/>
@@ -104,9 +104,9 @@
                         android:scaleType="center"
                         android:layout_marginTop="24dp"
                         app:layout_constraintTop_toBottomOf="@+id/textSpeakerDesc"
-                        android:layout_marginStart="16dp"
+                        android:layout_marginStart="20dp"
                         app:layout_constraintLeft_toLeftOf="parent"
-                        android:layout_marginLeft="16dp"
+                        android:layout_marginLeft="20dp"
                         tools:ignore="ContentDescription"/>
 
                     <TextView
@@ -116,9 +116,9 @@
                         tools:text="Developer"
                         android:textAppearance="@style/TextAppearance.AppCompat.Small"
                         android:textStyle="bold"
-                        android:layout_marginStart="20dp"
+                        android:layout_marginStart="16dp"
                         app:layout_constraintLeft_toRightOf="@+id/imageSpeakerCompany"
-                        android:layout_marginLeft="20dp"
+                        android:layout_marginLeft="16dp"
                         app:layout_constraintTop_toTopOf="@+id/imageSpeakerCompany"/>
 
                     <TextView
@@ -128,9 +128,9 @@
                         tools:text="Company"
                         android:textAppearance="@style/TextAppearance.AppCompat.Small"
                         android:textStyle="bold"
-                        android:layout_marginStart="20dp"
+                        android:layout_marginStart="16dp"
                         app:layout_constraintLeft_toRightOf="@+id/imageSpeakerCompany"
-                        android:layout_marginLeft="20dp"
+                        android:layout_marginLeft="16dp"
                         app:layout_constraintTop_toBottomOf="@+id/textSpeakerJobTitle"
                         app:layout_constraintBottom_toBottomOf="@+id/imageSpeakerCompany"/>
 
@@ -139,23 +139,13 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/gridSocialButtons"
                     android:layout_width="match_parent"
-                    android:layout_height="120dp"
-                    android:layout_marginStart="16dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    android:layout_marginLeft="16dp"
-                    app:layout_constraintTop_toBottomOf="parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
                     android:layout_marginTop="16dp"
-                    android:layout_marginEnd="16dp"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:layout_marginRight="16dp"/>
-
-                <android.support.v7.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-
-                </android.support.v7.widget.CardView>
-
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginRight="20dp"/>
             </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
     </android.support.design.widget.CoordinatorLayout>
