--- a/app/src/main/res/layout/item_session.xml
+++ b/app/src/main/res/layout/item_session.xml
@@ -33,15 +33,16 @@
                 android:layout_height="wrap_content"
                 app:roundCorners="true"
                 app:squareSized="true"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="12dp"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginStart="16dp"
                 app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginLeft="16dp"/>
+                android:layout_marginLeft="16dp"
+                tools:src="@drawable/shape_circle"/>
 
             <TextView
                 android:id="@+id/textSessionTitle"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
+                android:textAppearance="@style/TextAppearance.DevFest.Card.Title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@+id/imageSession"
@@ -51,11 +52,12 @@
                 android:layout_marginEnd="16dp"
                 app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginRight="16dp"
-                tools:text="Awesome Session"/>
+                tools:text="Awesome Session"
+                android:layout_marginTop="4dp"/>
 
             <TextView
                 android:id="@+id/textSessionSub"
-                android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
+                android:textAppearance="@style/TextAppearance.DevFest.Card.Subtitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/textSessionTitle"
