--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,11 +5,11 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="tag_android">#A4C639</color>
-    <color name="tag_web">#0266C8</color>
-    <color name="tag_cloud">#F2B50F</color>
+    <color name="tag_web">#FF0000</color>
+    <color name="tag_cloud">#3FA5FF</color>
     <color name="tag_android_overlay">#AAA4C639</color>
-    <color name="tag_web_overlay">#AA0266C8</color>
-    <color name="tag_cloud_overlay">#AAF2B50F</color>
+    <color name="tag_web_overlay">#AAFF0000</color>
+    <color name="tag_cloud_overlay">#AA3FA5FF</color>
 
     <!-- black with 54% opacity -->
     <color name="black_54">#8a000000</color>
