--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,10 +5,13 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="tag_android">#A4C639</color>
-    <color name="tag_web">#FF0000</color>
-    <color name="tag_cloud">#3FA5FF</color>
+    <color name="tag_android_dark">#7C962B</color>
     <color name="tag_android_overlay">#AAA4C639</color>
+    <color name="tag_web">#FF0000</color>
+    <color name="tag_web_dark">#AC0000</color>
     <color name="tag_web_overlay">#AAFF0000</color>
+    <color name="tag_cloud">#3FA5FF</color>
+    <color name="tag_cloud_dark">#307FC4</color>
     <color name="tag_cloud_overlay">#AA3FA5FF</color>
 
     <!-- black with 54% opacity -->
