shared element transition for session details

--- a/app/src/main/res/layout/fragment_session_details.xml
+++ b/app/src/main/res/layout/fragment_session_details.xml
@@ -69,7 +69,8 @@
             app:layout_constraintLeft_toLeftOf="parent"
             tools:text="Awesome Session"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginEnd="16dp" />
+            android:layout_marginEnd="16dp"
+            android:transitionName="@string/transition_session_title"/>
 
         <TextView
             android:id="@+id/textSessionSub"
@@ -82,7 +83,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="16dp"
             app:layout_constraintRight_toRightOf="@+id/textSessionTitle"
-            android:layout_marginEnd="8dp" />
+            android:layout_marginEnd="8dp"
+            android:transitionName="@string/transition_session_sub"/>
 
       </android.support.constraint.ConstraintLayout>
 
