--- a/app/src/main/res/layout/item_session.xml
+++ b/app/src/main/res/layout/item_session.xml
@@ -4,12 +4,11 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardSession"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/spacing_small"
-        android:layout_marginLeft="@dimen/spacing_small"
         android:layout_marginEnd="@dimen/spacing_small"
-        android:layout_marginRight="@dimen/spacing_small"
         android:minHeight="56dp"
         android:foreground="?selectableItemBackground"
         android:clickable="true"
@@ -39,7 +38,6 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginStart="16dp"
                 app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginLeft="16dp"
                 tools:src="@drawable/shape_circle"/>
 
             <TextView
@@ -50,12 +48,11 @@
                 app:layout_constraintTop_toTopOf="@+id/imageSession"
                 android:layout_marginStart="16dp"
                 app:layout_constraintLeft_toRightOf="@+id/imageSession"
-                android:layout_marginLeft="16dp"
                 tools:text="Awesome Session"
                 android:layout_marginTop="4dp"
                 app:layout_constraintRight_toLeftOf="@+id/buttonAdd"
                 android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"/>
+                android:transitionName="@string/transition_session_title"/>
 
             <TextView
                 android:id="@+id/textSessionSub"
@@ -69,7 +66,7 @@
                 android:layout_marginBottom="16dp"
                 app:layout_constraintRight_toLeftOf="@+id/buttonAdd"
                 android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"/>
+                android:transitionName="@string/transition_session_sub"/>
 
             <ImageButton
                 android:id="@+id/buttonAdd"
@@ -81,7 +78,6 @@
                 android:layout_marginEnd="16dp"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/textSessionTitle"
-                android:layout_marginRight="16dp"
                 tools:ignore="ContentDescription"/>
         </android.support.constraint.ConstraintLayout>
 
