show speakers on session, show stage just when set

--- a/app/src/main/res/layout/fragment_event_part.xml
+++ b/app/src/main/res/layout/fragment_event_part.xml
@@ -11,16 +11,10 @@
         app:cardPreventCornerOverlap="true"
         app:cardBackgroundColor="@color/cardview_light_background">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/trackToolbar"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"/>
-
         <android.support.v7.widget.RecyclerView
             android:id="@+id/trackSessionList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="48dp">
+            android:layout_height="match_parent">
 
         </android.support.v7.widget.RecyclerView>
     </android.support.v7.widget.CardView>
