--- a/app/src/main/res/layout/fragment_session_details.xml
+++ b/app/src/main/res/layout/fragment_session_details.xml
@@ -122,7 +122,7 @@
           <TextView
               android:id="@+id/textSessionDesc"
               tools:text="Awesome talk about very awesome technology with lots of very cool and funny jokes."
-              android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
+              android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
               android:lineSpacingMultiplier="1.3"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
@@ -145,31 +145,29 @@
               app:layout_constraintLeft_toLeftOf="parent"
               tools:ignore="ContentDescription"
               android:layout_width="36dp"
-              android:layout_height="36dp" />
+              android:layout_height="36dp"
+              android:visibility="gone"/>
 
           <TextView
               android:id="@+id/textLocation"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
+              android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
               tools:text="Main Stage"
               android:layout_marginStart="16dp"
               app:layout_constraintLeft_toRightOf="@+id/imageSessionLocation"
               app:layout_constraintTop_toTopOf="@+id/imageSessionLocation"
-              app:layout_constraintBottom_toBottomOf="@+id/imageSessionLocation" />
+              app:layout_constraintBottom_toBottomOf="@+id/imageSessionLocation"
+              android:visibility="gone"/>
 
         </android.support.constraint.ConstraintLayout>
 
-        <!--<android.support.v7.widget.RecyclerView-->
-        <!--android:id="@+id/speakerList"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginStart="20dp"-->
-        <!--android:layout_marginLeft="20dp"-->
-        <!--android:layout_marginTop="16dp"-->
-        <!--android:layout_marginBottom="16dp"-->
-        <!--android:layout_marginEnd="20dp"-->
-        <!--android:layout_marginRight="20dp"/>-->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/speakerList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="16dp"/>
 
       </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
