--- a/app/src/main/res/layout/item_session.xml
+++ b/app/src/main/res/layout/item_session.xml
@@ -26,7 +26,8 @@
         <android.support.constraint.ConstraintLayout
             android:id="@+id/containerSessionForeground"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:paddingBottom="16dp">
 
             <de.devfest.ui.DevFestImageView
                 android:id="@+id/imageSession"
@@ -62,8 +63,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/textSessionTitle"
                 app:layout_constraintLeft_toLeftOf="@+id/textSessionTitle"
                 tools:text="Awesome Speaker"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="16dp"
                 app:layout_constraintRight_toLeftOf="@+id/buttonAdd"
                 android:layout_marginEnd="8dp"
                 android:transitionName="@string/transition_session_sub"/>
